apps/prod/guacamole/patch-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
spec:
  template:
    spec:
      containers:
        - name: guacamole
