apps/prod/guacamole/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: guacamole
  namespace: guacamole
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: myrobertson-com-gateway
      namespace: default
      sectionName: rdp
  hostnames:
    - rdp.myrobertson.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: guacamole
          port: 80
